--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,9 @@ python:
 install: "pip install -r requirements.txt"
 # command to run tests
 script: make test
+
+# whitelist
+branches:
+  only:
+    - master
+    - develop
